compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__collapse_nested_case_works_with_blocks.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main(x) {\n  case x {\n    Ok(var) -> {\n      case var {\n        1 -> 2\n        2 -> 4\n        _ -> -1\n      }\n    }\n    _ -> todo\n  }\n}"
---
----- BEFORE ACTION
pub fn main(x) {
  case x {
    Ok(var) -> {
       ↑        
      case var {
        1 -> 2
        2 -> 4
        _ -> -1
      }
    }
    _ -> todo
  }
}


----- AFTER ACTION
pub fn main(x) {
  case x {
    Ok(1) -> 2
    Ok(2) -> 4
    Ok(_) -> -1
    _ -> todo
  }
}
