compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__convert_assert_result_to_case.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action_with_title(code, 2, CONVERT_TO_CASE)"
---
pub fn main() {
  let foo = case Ok(1) {
    Ok(foo) -> foo
    _ -> panic
  }
}
