compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__convert_let_assert_alias_to_case.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action_with_title(\"\npub fn main() {\n  let assert 10 as ten = 10\n}\n\",\n    2, CONVERT_TO_CASE)"
---
pub fn main() {
  let ten = case 10 {
    10 as ten -> ten
    _ -> panic
  }
}
