compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__convert_let_assert_to_case_indented.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action_with_title(\"\npub fn main() {\n  {\n    let assert Ok(foo) = Ok(1)\n  }\n}\n\",\n    3, CONVERT_TO_CASE)"
---
pub fn main() {
  {
    let foo = case Ok(1) {
      Ok(foo) -> foo
      _ -> panic
    }
  }
}
